# CMCS

./: CMakeLists.txt  init.txt
OLD/: C_shareableData.cpp  main.cpp  simul_ext.cpp  simul_ext.h
data/: testuc.asm  testuc.hex
data/images/xcf/: InterOn.xcf  LedOff.xcf
data/include/: Delay.h  REG51F380.h
data/include/backup/: REG51F380.H
data/testuc/: main.c  testuc.uvproj
drawingUtils/: CMakeLists.txt
drawingUtils/includes/: C_font.hpp  C_sprite.hpp  C_surface.hpp  C_text.hpp  C_texture.hpp  drawingUtilsExtern.hpp
drawingUtils/sources/: C_font.cpp  C_sprite.cpp  C_surface.cpp  C_text.cpp  C_texture.cpp
extensions/: CMCS_API.hpp  C_bit.hpp  C_bit.inl  C_shareableData.hpp  C_shareableData.inl  simul_device.hpp
extensions/CMCS_GUI/: CMakeLists.txt  C_pin.cpp  C_pin.hpp  main.cpp
extensions/CMCS_GUI/data/libGUI/images/xcf/: LedOn.xcf  SwitchOff.xcf
extensions/CMCS_Oscilloscope/: CMakeLists.txt  main.cpp  main.hpp
extensions/CMCS_Oscilloscope/data/libOscilloscope/images/xcf/: PowerOff.xcf  PowerOn.xcf  osc.xcf
extensions/KMCS_libOscilloscope/: C_bit.inl  main.cpp
includes/: C_shareableData.hpp  C_shareableData.inl  simul_C8051_opcode.hpp  simul_core.hpp  simul_ext.hpp  simul_main.hpp  simul_math.hpp
sources/: simul_C8051_opcode.cpp  simul_core.cpp  simul_ext.cpp  simul_main.cpp  simul_math.cpp
testC8051/projectSimpleCounter/: main.c  simpleCounter.uvproj
testC8051/projectSimpleIO/: main.c  simpleIO.uvproj
testC8051/projectSimplePong/: .gitignore  main.c  simplePong.uvproj
